--- a/main/style/css.css
+++ b/main/style/css.css
@@ -1,3 +1,17 @@
 body{
   background-color: #EDEDED;
 }
+
+#ajuda{
+  padding: 0 3px 0 3px;
+  color:#56329a;
+}
+
+#ajuda:hover{
+  color:#7b52c7;
+  cursor:pointer;
+}
+
+path , .close{
+  cursor:pointer;
+}
