--- a/main/style/css.css
+++ b/main/style/css.css
@@ -5,6 +5,7 @@ body{
 #ajuda{
   padding: 0 3px 0 3px;
   color:#56329a;
+  cursor: pointer;
 }
 
 #ajuda:hover{
@@ -14,4 +15,25 @@ body{
 
 path , .close{
   cursor:pointer;
+}
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
